# automated_job_searches

./: Cargo.toml  DESIGN.md  README.md  SOURCES.md
src/: ats.rs  db.rs  discover.rs  http.rs  main.rs
src/adapters/: ashby.rs  bamboohr.rs  greenhouse.rs  lever.rs  mod.rs  recruitee.rs  smartrecruiters.rs  workday.rs
src/crawlers/: cryptocurrencyjobs.rs  cryptojobs.rs  europeanremote.rs  hn_whoshiring.rs  mod.rs  thehub.rs  web3career.rs  workingnomads.rs
src/search/: brave.rs  exa.rs  firecrawl.rs  google.rs  mod.rs  serper.rs  tavily.rs  you.rs
