[package]
name = "ajs"
version = "0.1.0"
edition = "2021"
description = "Automated job searches: crawl aggregators, discover ATS-hosted boards, list jobs"

[[bin]]
name = "ajs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "smallvec", "std"] }
url = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
